--- a/about.html
+++ b/about.html
@@ -86,7 +86,16 @@
     </footer>
 
     <!-- JavaScript for Toggle Menu -->
-    <script src="scripts.js"></script>
+      
+  <script>
+    var navBar = document.getElementById("navBar");
+    function showMenu() {
+     navBar.style.right = "0";
+    }
+    function hideMenu() {
+     navBar.style.right = "-200px"
+    }
+    </script>
 
 
 </body>
