Title change for about page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | Solo Hub</title>
+    <title>About | Solo Hub</title>
 
     <!-- Meta tags for SEO -->
     <meta name="description" content="Solo Hub. A website for people who enjoy solo travelling or first-time solo travellers">
