text on destinationheadline tweaked

--- a/destinations.html
+++ b/destinations.html
@@ -40,7 +40,7 @@
     <main>
         <section class="destination-header">
             <h1>Top Destinations for Solo Travelers</h1>
-            <p>Discover exciting places to explore on your own. Each destination offers unique experiences and opportunities for self-discovery.</p>
+            <p>Discover exciting places to explore on your own, each destination offers unique experiences and opportunities for self-discovery!</p>
         </section>
 
         <section class="destination-list">
